Initial Branko Simic vercelroutes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="hero-text">
           <h1 class="hero-title">AUTO-SERVIS SIMIĆ</h1>
           <p class="hero-tagline">Majstor koji rješava kvarove – ne nagađa</p>
-          <p class="hero-sub">Pouzdan automehaničarski servis u Prnjavoru. Dijagnostika, popravke i rješenja i za kvarove koje drugi ne znaju riješiti.</p>
+          <p class="hero-sub">Pouzdan automehaničarski servis u Prnjavoru. Dijagnostika, popravke i rješenja i rješenja za teške kvarove koje drugi ne znaju riješiti.</p>
           <div class="hero-cta">
             <a href="tel:+38765265013" class="btn btn-primary">Pozovi odmah</a>
             <a href="#location" class="btn btn-secondary">Pronađi nas na mapi</a>
@@ -153,6 +153,9 @@
             <a href="https://www.google.com/maps/search/Donja+Ilova+bb+Prnjavor" target="_blank" rel="noopener" class="btn btn-secondary">Otvori Google Maps</a>
           </div>
         </div>
+      </div>
+      <div class="map-wrap">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d180768.29975225485!2d17.589352029024276!3d44.93340740940694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475ddd177a31ec19%3A0x8f8c9c2b4f9cfef3!2zQXV0by1zZXJ2aXMgIlNpbWnEhyI!5e0!3m2!1sen!2sba!4v1770390953338!5m2!1sen!2sba" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Lokacija Auto-servis SIMIĆ"></iframe>
       </div>
     </section>
 
