Initial Branko Simic efekti zavrseni

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="services-content">
           <h2 class="section-title">Šta radimo</h2>
-          <p class="section-lead">Sve na jednom mjestu – bez zavlačenja</p>
+          <p class="section-lead type-in" data-type-in="Sve na jednom mjestu – bez zavlačenja"><span class="type-in-text"></span><span class="type-in-cursor" aria-hidden="true">|</span></p>
           <ul class="check-list service-cards">
             <li class="service-card"><span class="service-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M15 7a2 2 0 012 2m-2 2a2 2 0 01-2-2m2 2v8a2 2 0 01-2 2H7a2 2 0 01-2-2V9a2 2 0 012-2h2"/><path d="M12 12v3M12 8v1M12 16v1"/></svg></span>Dijagnostika svih sistema</li>
             <li class="service-card"><span class="service-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z"/></svg></span>Mehanički i elektronski kvarovi</li>
@@ -87,7 +87,7 @@
         </div>
         <div class="why-content">
           <h2 class="section-title">Zašto baš Branko?</h2>
-          <p class="section-lead why-type-in" data-type-in="Kad drugi kažu „ne može“ – mi tek počinjemo."><span class="type-in-text"></span><span class="type-in-cursor" aria-hidden="true">|</span></p>
+          <p class="section-lead type-in" data-type-in="Kad drugi kažu „ne može“ – mi tek počinjemo."><span class="type-in-text"></span><span class="type-in-cursor" aria-hidden="true">|</span></p>
           <p class="section-note">Iskustvo, dijagnostika i logika rješavaju i najteže kvarove.</p>
           <ul class="bullet-list">
             <li>Iskustvo, ne pretpostavke</li>
