Initial Branko Simic mobilni slep sluzba

--- a/index.html
+++ b/index.html
@@ -126,6 +126,46 @@
     </section>
 
     <!-- ═══════════════════════════════════════════════════════════════ -->
+    <!-- ŠLEP SLUŽBA – pomoć na putu, teritorija fleksibilna -->
+    <!-- ═══════════════════════════════════════════════════════════════ -->
+    <section class="section slep reveal" id="slep">
+      <div class="section-inner slep-inner">
+        <div class="slep-content">
+          <h2 class="section-title">Šlep služba – pomoć na putu, bez obzira gdje ste stali</h2>
+          <p class="section-lead type-in" data-type-in="Krećemo iz Prnjavora, dolazimo gdje je potrebno – BiH, Hrvatska i šire."><span class="type-in-text"></span><span class="type-in-cursor" aria-hidden="true">|</span></p>
+          <p class="slep-main">Bez obzira da li ste stali u blizini kuće ili daleko na putu – javite se, dogovorićemo rješenje.</p>
+          <div class="slep-visual" aria-hidden="true">
+            <div class="slep-map-placeholder">
+              <span class="slep-route">Prnjavor → BiH, Hrvatska i šire</span>
+              <svg class="slep-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" aria-hidden="true"><path d="M8 17h8m0 0v-5a2 2 0 00-2-2h-4a2 2 0 00-2 2v5m8 0H8m0 0H6a2 2 0 01-2-2V7a2 2 0 012-2h8a2 2 0 012 2v8a2 2 0 01-2 2h-2"/><path d="M12 8v4m0 0v4m0-4h4m-4 0H8"/></svg>
+            </div>
+            <p class="slep-caption">Krećemo odavde – dolazimo gdje treba.</p>
+          </div>
+          <div class="slep-cta">
+            <a href="tel:+38765265013" class="btn btn-primary btn-large btn-call-single btn-sweep btn-pulse-hover slep-btn">Pomoć na putu – pozovi odmah</a>
+            <div class="call-options call-options-slep" aria-label="Način poziva">
+              <a href="tel:+38765265013" class="btn btn-call btn-call-tel">Poziv</a>
+              <a href="https://wa.me/38765265013" class="btn btn-call btn-call-wa" target="_blank" rel="noopener">WhatsApp</a>
+              <a href="viber://add?number=38765265013" class="btn btn-call btn-call-viber">Viber</a>
+            </div>
+            <p class="slep-note">Dostupni i van lokalne regije – po dogovoru.</p>
+          </div>
+          <dl class="slep-faq">
+            <dt>Da li dolazite u Hrvatsku?</dt>
+            <dd>Da. Šlep i pomoć na putu vršimo i prema Hrvatskoj i drugim državama, u zavisnosti od situacije i dogovora.</dd>
+            <dt>Koliko brzo dolazite?</dt>
+            <dd>Zavisi od udaljenosti i saobraćaja – pozovite i dobićete tačnu informaciju odmah.</dd>
+            <dt>Da li radite noću?</dt>
+            <dd>Po dogovoru – kvar ne bira vrijeme.</dd>
+          </dl>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sticky CTA mobil: Šlep / pomoć na putu -->
+    <a href="tel:+38765265013" class="slep-sticky-btn btn btn-primary btn-call-single" id="slep-sticky-btn" aria-label="Pomoć na putu – pozovi">Šlep / pomoć na putu</a>
+
+    <!-- ═══════════════════════════════════════════════════════════════ -->
     <!-- GALLERY – Radionica & rad (slike kasnije) -->
     <!-- ═══════════════════════════════════════════════════════════════ -->
     <section class="section gallery reveal" id="gallery">
