--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
       </div>
     </section>
 
-    <!-- Sticky CTA mobil: Šlep / pomoć na putu -->
-    <a href="tel:+38765265013" class="slep-sticky-btn btn btn-primary btn-call-single" id="slep-sticky-btn" aria-label="Pomoć na putu – pozovi">Šlep / pomoć na putu</a>
+    <!-- Sticky CTA mobil: mala slušalica desno – Šlep / pomoć na putu -->
+    <a href="tel:+38765265013" class="slep-sticky-btn btn btn-primary btn-call-single" id="slep-sticky-btn" aria-label="Pomoć na putu – pozovi">
+      <svg class="slep-sticky-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z"/></svg>
+    </a>
 
     <!-- ═══════════════════════════════════════════════════════════════ -->
     <!-- SERVICES – "RADNIK" – Branko nad motorom, dijagnostika -->
